--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -9,9 +9,7 @@
   "account": "會員帳號",
   "password": "會員密碼",
   "confirm_password": "確認會員密碼",
-  "submit": "送出",
-  "cancel": "取消",
-  "reset": "重設",
+  "name": "姓名",
   "address": "詳細地址",
   "city": "縣市",
   "district": "區",
@@ -19,5 +17,14 @@
   "gender": "性別",
   "birthday": "出生年月日",
   "email": "電子信箱",
-  "select_role": "請選擇會員身分"
+  "select_role": "請選擇會員身分",
+  "register_membership": "註冊會員",
+  "back": "回上一步",
+  "next": "下一步",
+  "cancel": "取消",
+  "reset": "重設",
+  "submit": "送出",
+  "male": "男",
+  "female": "女",
+  "rahter_not_say": "不願透露"
 }
