--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -6,10 +6,13 @@
   "title_1": "Hot",
   "slogan": "hello",
   "about": "about us",
+  "step1": "AccountInfo",
+  "step2": "PersonalInfo",
   "account": "Account",
   "password": "Password",
   "confirm_password": "Confirm Password",
   "name": "Name",
+  "host_name": "Host Name",
   "address": "Address",
   "city": "City",
   "district": "District",
@@ -26,5 +29,385 @@
   "submit": "Submit",
   "male": "male",
   "female": "female",
-  "rahter_not_say": "Rather not say"
+  "rahter_not_say": "Rather not say",
+  "required": "Required",
+  "null": "",
+  "Taipei_City": "Taipei City",
+  "Keelung_City": "Keelung City",
+  "New_Taipei_City": "New Taipei City",
+  "Yilan_County": "Yilan County",
+  "Taoyuan_City": "Taoyuan City",
+  "Hsinchu_City": "Hsinchu City",
+  "Hsinchu_County": "Hsinchu County",
+  "Miaoli_County": "Miaoli County",
+  "Taichung_City": "Taichung City",
+  "Changhua_County": "Changhua County",
+  "Nantou_County": "Nantou County",
+  "Chiayi_City": "Chiayi City",
+  "Chiayi_County": "Chiayi County",
+  "Yunlin_County": "Yunlin County",
+  "Tainan_City": "Tainan City",
+  "Kaohsiung_City": "Kaohsiung City",
+  "Penghu_County": "Penghu County",
+  "Kinmen_County": "Kinmen County",
+  "Pingtung_County": "Pingtung County",
+  "Taitung_County": "Taitung County",
+  "Hualien_County": "Hualien County",
+  "Lienchiang_County": "Lienchiang County",
+  "Zhongzheng_District": "Zhongzheng District",
+  "Datong_District": "Datong District",
+  "Zhongshan_District": "Zhongshan District",
+  "Songshan_District": "Songshan District",
+  "Da’an_District": "Da’an District",
+  "Wanhua_District": "Wanhua District",
+  "Xinyi_District": "Xinyi District",
+  "Shilin_District": "Shilin District",
+  "Beitou_District": "Beitou District",
+  "Neihu_District": "Neihu District",
+  "Nangang_District": "Nangang District",
+  "Wenshan_District": "Wenshan District",
+  "Ren’ai_District": "Ren’ai District",
+  "Anle_District": "Anle District",
+  "Nuannuan_District": "Nuannuan District",
+  "Qidu_District": "Qidu District",
+  "Wanli_District": "Wanli District",
+  "Jinshan_District": "Jinshan District",
+  "Banqiao_District": "Banqiao District",
+  "Xizhi_District": "Xizhi District",
+  "Shenkeng_District": "Shenkeng District",
+  "Shiding_District": "Shiding District",
+  "Ruifang_District": "Ruifang District",
+  "Pingxi_District": "Pingxi District",
+  "Shuangxi_District": "Shuangxi District",
+  "Gongliao_District": "Gongliao District",
+  "Xindian_District": "Xindian District",
+  "Pinglin_District": "Pinglin District",
+  "Wulai_District": "Wulai District",
+  "Yonghe_District": "Yonghe District",
+  "Zhonghe_District": "Zhonghe District",
+  "Tucheng_District": "Tucheng District",
+  "Sanxia_District": "Sanxia District",
+  "Shulin_District": "Shulin District",
+  "Yingge_District": "Yingge District",
+  "Sanchong_District": "Sanchong District",
+  "Xinzhuang_District": "Xinzhuang District",
+  "Taishan_District": "Taishan District",
+  "Linkou_District": "Linkou District",
+  "LuzhouDistrict": "LuzhouDistrict",
+  "Wugu_District": "Wugu District",
+  "Bali_District": "Bali District",
+  "Tamsui_District": "Tamsui District",
+  "Sanzhi_District": "Sanzhi District",
+  "Shimen_District": "Shimen District",
+  "Yilan_City": "Yilan City",
+  "Toucheng_Township": "Toucheng Township",
+  "Jiaoxi_Township": "Jiaoxi Township",
+  "Zhuangwei_Township": "Zhuangwei Township",
+  "Yuanshan_Township": "Yuanshan Township",
+  "Luodong_Township": "Luodong Township",
+  "Sanxing_Township": "Sanxing Township",
+  "Datong_Township": "Datong Township",
+  "Wujie_Township": "Wujie Township",
+  "Dongshan_Township": "Dongshan Township",
+  "Su’ao_Township": "Su’ao Township",
+  "Nan’ao_Township": "Nan’ao Township",
+  "Diauyutai": "Diauyutai",
+  "Zhongli_District": "Zhongli District",
+  "Pingzhen_District": "Pingzhen District",
+  "Longtan_District": "Longtan District",
+  "Yangmei_District": "Yangmei District",
+  "Xinwu_District": "Xinwu District",
+  "Guanyin_District": "Guanyin District",
+  "Taoyuan_District": "Taoyuan District",
+  "Guishan_District": "Guishan District",
+  "Bade_District": "Bade District",
+  "Daxi_District": "Daxi District",
+  "Fuxing_District": "Fuxing District",
+  "Dayuan_District'": "Dayuan District'",
+  "Luzhu_District": "Luzhu District",
+  "East_District": "East District",
+  "North_District": "North District",
+  "Xiangshan_District": "Xiangshan District",
+  "Zhubei_City": "Zhubei City",
+  "Hukou_Township": "Hukou Township",
+  "Xinfeng_Township": "Xinfeng Township",
+  "Xinpu_Township": "Xinpu Township",
+  "Guanxi_Township": "Guanxi Township",
+  "Qionglin_Township": "Qionglin Township",
+  "Baoshan_Township": "Baoshan Township",
+  "Zhudong_Township": "Zhudong Township",
+  "Wufeng_Township": "Wufeng Township",
+  "Hengshan_Township": "Hengshan Township",
+  "Jianshi_Township": "Jianshi Township",
+  "Beipu_Township": "Beipu Township",
+  "Emei_Township": "Emei Township",
+  "Zhunan_Township": "Zhunan Township",
+  "Toufen_Township": "Toufen Township",
+  "Sanwan_Township": "Sanwan Township",
+  "Nanzhuang_Township": "Nanzhuang Township",
+  "Shitan_Township": "Shitan Township",
+  "Houlong_Township": "Houlong Township",
+  "Tongxiao_Township": "Tongxiao Township",
+  "Yuanli_Township": "Yuanli Township",
+  "Miaoli_City": "Miaoli City",
+  "Zaoqiao_Township": "Zaoqiao Township",
+  "Touwu_Township": "Touwu Township",
+  "Gongguan_Township": "Gongguan Township",
+  "Dahu_Township": "Dahu Township",
+  "Tai’an_Township": "Tai’an Township",
+  "Tongluo_Township": "Tongluo Township",
+  "Sanyi_Township": "Sanyi Township",
+  "Xihu_Township": "Xihu Township",
+  "Zhuolan_Township": "Zhuolan Township",
+  "Central_District": "Central District",
+  "South_District": "South District",
+  "West_District": "West District",
+  "Beitun_District": "Beitun District",
+  "Xitun_District": "Xitun District",
+  "Nantun_District": "Nantun District",
+  "Taiping_District": "Taiping District",
+  "Dali_District": "Dali District",
+  "Wufeng_District": "Wufeng District",
+  "Wuri_District": "Wuri District",
+  "Fengyuan_District": "Fengyuan District",
+  "Houli_District": "Houli District",
+  "Shigang_District": "Shigang District",
+  "Dongshi_District": "Dongshi District",
+  "Heping_District": "Heping District",
+  "Xinshe_District": "Xinshe District",
+  "Tanzi_District": "Tanzi District",
+  "Daya_District": "Daya District",
+  "Shengang_District": "Shengang District",
+  "Dadu_District": "Dadu District",
+  "ShaluDistrict": "ShaluDistrict",
+  "Longjing_District": "Longjing District",
+  "Wuqi_District": "Wuqi District",
+  "Qingshui_District": "Qingshui District",
+  "Dajia_District": "Dajia District",
+  "Waipu_District": "Waipu District",
+  "Changhua_City": "Changhua City",
+  "Fenyuan_Township": "Fenyuan Township",
+  "Huatan_Township": "Huatan Township",
+  "Xiushui_Township": "Xiushui Township",
+  "Lukang_Township": "Lukang Township",
+  "Fuxing_Township": "Fuxing Township",
+  "Xianxi_Township": "Xianxi Township",
+  "Hemei_Township": "Hemei Township",
+  "Shengang_Township": "Shengang Township",
+  "Yuanlin_Township": "Yuanlin Township",
+  "Shetou_Township": "Shetou Township",
+  "Yongjing_Township": "Yongjing Township",
+  "Puxin_Township": "Puxin Township",
+  "Dacun_Township": "Dacun Township",
+  "Puyan_Township": "Puyan Township",
+  "Tianzhong_Township": "Tianzhong Township",
+  "Beidou_Township": "Beidou Township",
+  "Tianwei_Township": "Tianwei Township",
+  "Pitou_Township": "Pitou Township",
+  "Xizhou_Township": "Xizhou Township",
+  "Zhutang_Township": "Zhutang Township",
+  "Erlin_Township": "Erlin Township",
+  "Dacheng_Township": "Dacheng Township",
+  "Fangyuan_Township": "Fangyuan Township",
+  "Ershui_Township": "Ershui Township",
+  "Nantou_City": "Nantou City",
+  "Zhongliao_Township": "Zhongliao Township",
+  "Caotun_Township": "Caotun Township",
+  "Guoxing_Township": "Guoxing Township",
+  "Puli_Township": "Puli Township",
+  "Ren’ai_Township": "Ren’ai Township",
+  "Mingjian_Township": "Mingjian Township",
+  "Jiji_Township": "Jiji Township",
+  "Shuili_Township": "Shuili Township",
+  "Yuchi_Township": "Yuchi Township",
+  "Xinyi_Township": "Xinyi Township",
+  "Zhushan_Township": "Zhushan Township",
+  "Lugu_Township": "Lugu Township",
+  "FanluTownship": "FanluTownship",
+  "Meishan_Township": "Meishan Township",
+  "Zhuqi_Township": "Zhuqi Township",
+  "Alishan_Township": "Alishan Township",
+  "Zhongpu_Township": "Zhongpu Township",
+  "Dapu_Township": "Dapu Township",
+  "Shuishang_Township": "Shuishang Township",
+  "Lucao_Township": "Lucao Township",
+  "Taibao_City": "Taibao City",
+  "Puzi_City": "Puzi City",
+  "Dongshi_Township": "Dongshi Township",
+  "Liujiao_Township": "Liujiao Township",
+  "Xingang_Township": "Xingang Township",
+  "Minxiong_Township": "Minxiong Township",
+  "Dalin_Township": "Dalin Township",
+  "Xikou_Township": "Xikou Township",
+  "Yizhu_Township": "Yizhu Township",
+  "Budai_Township": "Budai Township",
+  "Dounan_Township": "Dounan Township",
+  "Dapi_Township": "Dapi Township",
+  "Huwei_Township": "Huwei Township",
+  "Tuku_Township": "Tuku Township",
+  "Baozhong_Township": "Baozhong Township",
+  "Taixi_Township": "Taixi Township",
+  "Lunbei_Township": "Lunbei Township",
+  "Mailiao_Township": "Mailiao Township",
+  "Douliu_City": "Douliu City",
+  "Linnei_Township": "Linnei Township",
+  "Gukeng_Township": "Gukeng Township",
+  "Citong_Township": "Citong Township",
+  "Xiluo_Township": "Xiluo Township",
+  "Erlun_Township": "Erlun Township",
+  "Beigang_Township": "Beigang Township",
+  "Shuilin_Township": "Shuilin Township",
+  "Kouhu_Township": "Kouhu Township",
+  "Sihu_Township": "Sihu Township",
+  "Yuanchang_Township": "Yuanchang Township",
+  "West_Central_District": "West Central District",
+  "Anping_District": "Anping District",
+  "Annan_District": "Annan District",
+  "Yongkang_District": "Yongkang District",
+  "Guiren_District": "Guiren District",
+  "Xinhua_District": "Xinhua District",
+  "Zuozhen_District": "Zuozhen District",
+  "Yujing_District": "Yujing District",
+  "Nanxi_District": "Nanxi District",
+  "Nanhua_District": "Nanhua District",
+  "Rende_District": "Rende District",
+  "Guanmiao_District": "Guanmiao District",
+  "Longqi_District": "Longqi District",
+  "Guantian_District": "Guantian District",
+  "Madou_District": "Madou District",
+  "Jiali_District": "Jiali District",
+  "Xigang_District": "Xigang District",
+  "Qigu_District": "Qigu District",
+  "Jiangjun_District": "Jiangjun District",
+  "Xuejia_District": "Xuejia District",
+  "Beimen_District": "Beimen District",
+  "Xinying_District": "Xinying District",
+  "Houbi_District": "Houbi District",
+  "Baihe_District": "Baihe District",
+  "Dongshan_District": "Dongshan District",
+  "Liujia_District": "Liujia District",
+  "Xiaying_District": "Xiaying District",
+  "Liuying_District": "Liuying District",
+  "Yanshui_District": "Yanshui District",
+  "Shanhua_District": "Shanhua District",
+  "Danei_District": "Danei District",
+  "Shanshang_District": "Shanshang District",
+  "Xinshi_District": "Xinshi District",
+  "Anding_District": "Anding District",
+  "Xinxing_District'": "Xinxing District'",
+  "Qianjin_District": "Qianjin District",
+  "Lingya_District": "Lingya District",
+  "Yancheng_District": "Yancheng District",
+  "Gushan_District": "Gushan District",
+  "Qijin_District": "Qijin District",
+  "Qianzhen_District": "Qianzhen District",
+  "Sanmin_District": "Sanmin District",
+  "Nanzi_District": "Nanzi District",
+  "Xiaogang_District": "Xiaogang District",
+  "Zuoying_District": "Zuoying District",
+  "Renwu_District": "Renwu District",
+  "Dashe_District'": "Dashe District'",
+  "Dongsha_Islands": "Dongsha Islands",
+  "Nansha_Islands": "Nansha Islands",
+  "Gangshan_District": "Gangshan District",
+  "Alian_District": "Alian District",
+  "Tianliao_District": "Tianliao District",
+  "Yanchao_District": "Yanchao District",
+  "Qiaotou_District": "Qiaotou District",
+  "Ziguan_District": "Ziguan District",
+  "Mituo_District": "Mituo District",
+  "Yong’an_District": "Yong’an District",
+  "Hunei_District": "Hunei District",
+  "Fengshan_District": "Fengshan District",
+  "Daliao_District": "Daliao District",
+  "Linyuan_District": "Linyuan District",
+  "Niaosong_District": "Niaosong District",
+  "Dashu_District": "Dashu District",
+  "Qishan_District": "Qishan District",
+  "Meinong_District": "Meinong District",
+  "Liugui_District": "Liugui District",
+  "Neimen_District": "Neimen District",
+  "Shanlin_District": "Shanlin District",
+  "Jiaxian_District": "Jiaxian District",
+  "Namaxia_District": "Namaxia District",
+  "Maolin_District": "Maolin District",
+  "Qieding_District": "Qieding District",
+  "Magong_City": "Magong City",
+  "Xiyu_Township": "Xiyu Township",
+  "Wang’an_Township": "Wang’an Township",
+  "Qimei_Township": "Qimei Township",
+  "Baisha_Township": "Baisha Township",
+  "Huxi_Township": "Huxi Township",
+  "Jinsha_Township": "Jinsha Township",
+  "Jinhu_Township": "Jinhu Township",
+  "Jinning_Township": "Jinning Township",
+  "Jincheng_Township": "Jincheng Township",
+  "Lieyu_Township": "Lieyu Township",
+  "Wuqiu_Township": "Wuqiu Township",
+  "Pingtung_City": "Pingtung City",
+  "Sandimen_Township": "Sandimen Township",
+  "Wutai_Township": "Wutai Township",
+  "Majia_Township": "Majia Township",
+  "Jiuru_Township": "Jiuru Township",
+  "Ligang_Township": "Ligang Township",
+  "Gaoshu_Township": "Gaoshu Township",
+  "Yanpu_Township": "Yanpu Township",
+  "Changzhi_Township": "Changzhi Township",
+  "Linluo_Township": "Linluo Township",
+  "Zhutian_Township": "Zhutian Township",
+  "Neipu_Township": "Neipu Township",
+  "Wandan_Township": "Wandan Township",
+  "Chaozhou_Township": "Chaozhou Township",
+  "Taiwu_Township": "Taiwu Township",
+  "Laiyi_Township": "Laiyi Township",
+  "Wanluan_Township": "Wanluan Township",
+  "Kanding_Township": "Kanding Township",
+  "Xinpi_Township": "Xinpi Township",
+  "Nanzhou_Township": "Nanzhou Township",
+  "Linbian_Township": "Linbian Township",
+  "Donggang_Township": "Donggang Township",
+  "Liuqiu_Township": "Liuqiu Township",
+  "Jiadong_Township": "Jiadong Township",
+  "Xinyuan_Township": "Xinyuan Township",
+  "Fangliao_Township": "Fangliao Township",
+  "Fangshan_Township": "Fangshan Township",
+  "Chunri_Township": "Chunri Township",
+  "Shizi_Township": "Shizi Township",
+  "Checheng_Township": "Checheng Township",
+  "Mudan_Township": "Mudan Township",
+  "Hengchun_Township": "Hengchun Township",
+  "Manzhou_Township": "Manzhou Township",
+  "Taitung_City": "Taitung City",
+  "Ludao_Township": "Ludao Township",
+  "Lanyu_Township": "Lanyu Township",
+  "Yanping_Township": "Yanping Township",
+  "Beinan_Township": "Beinan Township",
+  "Luye_Township": "Luye Township",
+  "Guanshan_Township": "Guanshan Township",
+  "Haiduan_Township": "Haiduan Township",
+  "Chishang_Township": "Chishang Township",
+  "Donghe_Township": "Donghe Township",
+  "Chenggong_Township": "Chenggong Township",
+  "Changbin_Township": "Changbin Township",
+  "Taimali_Township": "Taimali Township",
+  "Jinfeng_Township": "Jinfeng Township",
+  "Dawu_Township": "Dawu Township",
+  "Daren_Township": "Daren Township",
+  "Hualien_City": "Hualien City",
+  "Xincheng_Township": "Xincheng Township",
+  "Xiulin_Township": "Xiulin Township",
+  "Ji’an_Township": "Ji’an Township",
+  "Shoufeng_Township": "Shoufeng Township",
+  "Fenglin_Township": "Fenglin Township",
+  "Guangfu_Township": "Guangfu Township",
+  "Fengbin_Township": "Fengbin Township",
+  "Ruisui_Township": "Ruisui Township",
+  "Wanrong_Township": "Wanrong Township",
+  "Yuli_Township": "Yuli Township",
+  "Zhuoxi_Township": "Zhuoxi Township",
+  "Fuli_Township": "Fuli Township",
+  "Nangan_Township": "Nangan Township",
+  "Beigan_Township": "Beigan Township",
+  "Juguang_Township": "Juguang Township",
+  "Dongyin_Township": "Dongyin Township"
 }
