--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -6,13 +6,16 @@
   "title_1": "熱門換宿",
   "slogan": "你好",
   "about": "關於我們",
+  "step1": "會員帳號資料",
+  "step2": "基本資料",
   "account": "會員帳號",
   "password": "會員密碼",
   "confirm_password": "確認會員密碼",
   "name": "姓名",
+  "host_name": "民宿名稱",
   "address": "詳細地址",
   "city": "縣市",
-  "district": "區",
+  "district": "鄉鎮區",
   "tel": "聯絡電話",
   "gender": "性別",
   "birthday": "出生年月日",
@@ -26,5 +29,385 @@
   "submit": "送出",
   "male": "男",
   "female": "女",
-  "rahter_not_say": "不願透露"
+  "rahter_not_say": "不願透露",
+  "required": "必填",
+  "null": "帳號長度為 4 到 20 個字",
+  "Taipei_City": "臺北市",
+  "Keelung_City": "基隆市",
+  "New_Taipei_City": "新北市",
+  "Yilan_County": "宜蘭縣",
+  "Taoyuan_City": "桃園市",
+  "Hsinchu_City": "新竹市",
+  "Hsinchu_County": "新竹縣",
+  "Miaoli_County": "苗栗縣",
+  "Taichung_City": "臺中市",
+  "Changhua_County": "彰化縣",
+  "Nantou_County": "南投縣",
+  "Chiayi_City": "嘉義市",
+  "Chiayi_County": "嘉義縣",
+  "Yunlin_County": "雲林縣",
+  "Tainan_City": "臺南市",
+  "Kaohsiung_City": "高雄市",
+  "Penghu_County": "澎湖縣",
+  "Kinmen_County": "金門縣",
+  "Pingtung_County": "屏東縣",
+  "Taitung_County": "臺東縣",
+  "Hualien_County": "花蓮縣",
+  "Lienchiang_County": "連江縣",
+  "Zhongzheng_District": "中正區",
+  "Datong_District": "大同區",
+  "Zhongshan_District": "中山區",
+  "Songshan_District": "松山區",
+  "Da’an_District": "大安區",
+  "Wanhua_District": "萬華區",
+  "Xinyi_District": "信義區",
+  "Shilin_District": "士林區",
+  "Beitou_District": "北投區",
+  "Neihu_District": "內湖區",
+  "Nangang_District": "南港區",
+  "Wenshan_District": "文山區",
+  "Ren’ai_District": "仁愛區",
+  "Anle_District": "安樂區",
+  "Nuannuan_District": "暖暖區",
+  "Qidu_District": "七堵區",
+  "Wanli_District": "萬里區",
+  "Jinshan_District": "金山區",
+  "Banqiao_District": "板橋區",
+  "Xizhi_District": "汐止區",
+  "Shenkeng_District": "深坑區",
+  "Shiding_District": "石碇區",
+  "Ruifang_District": "瑞芳區",
+  "Pingxi_District": "平溪區",
+  "Shuangxi_District": "雙溪區",
+  "Gongliao_District": "貢寮區",
+  "Xindian_District": "新店區",
+  "Pinglin_District": "坪林區",
+  "Wulai_District": "烏來區",
+  "Yonghe_District": "永和區",
+  "Zhonghe_District": "中和區",
+  "Tucheng_District": "土城區",
+  "Sanxia_District": "三峽區",
+  "Shulin_District": "樹林區",
+  "Yingge_District": "鶯歌區",
+  "Sanchong_District": "三重區",
+  "Xinzhuang_District": "新莊區",
+  "Taishan_District": "泰山區",
+  "Linkou_District": "林口區",
+  "LuzhouDistrict": "蘆洲區",
+  "Wugu_District": "五股區",
+  "Bali_District": "八里區",
+  "Tamsui_District": "淡水區",
+  "Sanzhi_District": "三芝區",
+  "Shimen_District": "石門區",
+  "Yilan_City": "宜蘭市",
+  "Toucheng_Township": "頭城鎮",
+  "Jiaoxi_Township": "礁溪鄉",
+  "Zhuangwei_Township": "壯圍鄉",
+  "Yuanshan_Township": "員山鄉",
+  "Luodong_Township": "羅東鎮",
+  "Sanxing_Township": "三星鄉",
+  "Datong_Township": "大同鄉",
+  "Wujie_Township": "五結鄉",
+  "Dongshan_Township": "冬山鄉",
+  "Su’ao_Township": "蘇澳鎮",
+  "Nan’ao_Township": "南澳鄉",
+  "Diauyutai": "釣魚台列嶼",
+  "Zhongli_District": "中壢區",
+  "Pingzhen_District": "平鎮區",
+  "Longtan_District": "龍潭區",
+  "Yangmei_District": "楊梅區",
+  "Xinwu_District": "新屋區",
+  "Guanyin_District": "觀音區",
+  "Taoyuan_District": "桃源區",
+  "Guishan_District": "龜山區",
+  "Bade_District": "八德區",
+  "Daxi_District": "大溪區",
+  "Fuxing_District": "復興區",
+  "Dayuan_District'": "大園區",
+  "Luzhu_District": "路竹區",
+  "East_District": "東區",
+  "North_District": "北區",
+  "Xiangshan_District": "香山區",
+  "Zhubei_City": "竹北市",
+  "Hukou_Township": "湖口鄉",
+  "Xinfeng_Township": "新豐鄉",
+  "Xinpu_Township": "新埔鎮",
+  "Guanxi_Township": "關西鎮",
+  "Qionglin_Township": "芎林鄉",
+  "Baoshan_Township": "寶山鄉",
+  "Zhudong_Township": "竹東鎮",
+  "Wufeng_Township": "五峰鄉",
+  "Hengshan_Township": "橫山鄉",
+  "Jianshi_Township": "尖石鄉",
+  "Beipu_Township": "北埔鄉",
+  "Emei_Township": "峨眉鄉",
+  "Zhunan_Township": "竹南鎮",
+  "Toufen_Township": "頭份市",
+  "Sanwan_Township": "三灣鄉",
+  "Nanzhuang_Township": "南庄鄉",
+  "Shitan_Township": "獅潭鄉",
+  "Houlong_Township": "後龍鎮",
+  "Tongxiao_Township": "通霄鎮",
+  "Yuanli_Township": "苑裡鎮",
+  "Miaoli_City": "苗栗市",
+  "Zaoqiao_Township": "造橋鄉",
+  "Touwu_Township": "頭屋鄉",
+  "Gongguan_Township": "公館鄉",
+  "Dahu_Township": "大湖鄉",
+  "Tai’an_Township": "泰安鄉",
+  "Tongluo_Township": "銅鑼鄉",
+  "Sanyi_Township": "三義鄉",
+  "Xihu_Township": "溪湖鎮",
+  "Zhuolan_Township": "卓蘭鎮",
+  "Central_District": "中區",
+  "South_District": "南區",
+  "West_District": "西區",
+  "Beitun_District": "北屯區",
+  "Xitun_District": "西屯區",
+  "Nantun_District": "南屯區",
+  "Taiping_District": "太平區",
+  "Dali_District": "大里區",
+  "Wufeng_District": "霧峰區",
+  "Wuri_District": "烏日區",
+  "Fengyuan_District": "豐原區",
+  "Houli_District": "后里區",
+  "Shigang_District": "石岡區",
+  "Dongshi_District": "東勢區",
+  "Heping_District": "和平區",
+  "Xinshe_District": "新社區",
+  "Tanzi_District": "潭子區",
+  "Daya_District": "大雅區",
+  "Shengang_District": "神岡區",
+  "Dadu_District": "大肚區",
+  "ShaluDistrict": "沙鹿區",
+  "Longjing_District": "龍井區",
+  "Wuqi_District": "梧棲區",
+  "Qingshui_District": "清水區",
+  "Dajia_District": "大甲區",
+  "Waipu_District": "外埔區",
+  "Changhua_City": "彰化市",
+  "Fenyuan_Township": "芬園鄉",
+  "Huatan_Township": "花壇鄉",
+  "Xiushui_Township": "秀水鄉",
+  "Lukang_Township": "鹿港鎮",
+  "Fuxing_Township": "福興鄉",
+  "Xianxi_Township": "線西鄉",
+  "Hemei_Township": "和美鎮",
+  "Shengang_Township": "伸港鄉",
+  "Yuanlin_Township": "員林市",
+  "Shetou_Township": "社頭鄉",
+  "Yongjing_Township": "永靖鄉",
+  "Puxin_Township": "埔心鄉",
+  "Dacun_Township": "大村鄉",
+  "Puyan_Township": "埔鹽鄉",
+  "Tianzhong_Township": "田中鎮",
+  "Beidou_Township": "北斗鎮",
+  "Tianwei_Township": "田尾鄉",
+  "Pitou_Township": "埤頭鄉",
+  "Xizhou_Township": "溪州鄉",
+  "Zhutang_Township": "竹塘鄉",
+  "Erlin_Township": "二林鎮",
+  "Dacheng_Township": "大城鄉",
+  "Fangyuan_Township": "芳苑鄉",
+  "Ershui_Township": "二水鄉",
+  "Nantou_City": "南投市",
+  "Zhongliao_Township": "中寮鄉",
+  "Caotun_Township": "草屯鎮",
+  "Guoxing_Township": "國姓鄉",
+  "Puli_Township": "埔里鎮",
+  "Ren’ai_Township": "仁愛鄉",
+  "Mingjian_Township": "名間鄉",
+  "Jiji_Township": "集集鎮",
+  "Shuili_Township": "水里鄉",
+  "Yuchi_Township": "魚池鄉",
+  "Xinyi_Township": "信義鄉",
+  "Zhushan_Township": "竹山鎮",
+  "Lugu_Township": "鹿谷鄉",
+  "FanluTownship": "番路鄉",
+  "Meishan_Township": "梅山鄉",
+  "Zhuqi_Township": "竹崎鄉",
+  "Alishan_Township": "阿里山",
+  "Zhongpu_Township": "中埔鄉",
+  "Dapu_Township": "大埔鄉",
+  "Shuishang_Township": "水上鄉",
+  "Lucao_Township": "鹿草鄉",
+  "Taibao_City": "太保市",
+  "Puzi_City": "朴子市",
+  "Dongshi_Township": "東勢鄉",
+  "Liujiao_Township": "六腳鄉",
+  "Xingang_Township": "新港鄉",
+  "Minxiong_Township": "民雄鄉",
+  "Dalin_Township": "大林鎮",
+  "Xikou_Township": "溪口鄉",
+  "Yizhu_Township": "義竹鄉",
+  "Budai_Township": "布袋鎮",
+  "Dounan_Township": "斗南鎮",
+  "Dapi_Township": "大埤鄉",
+  "Huwei_Township": "虎尾鎮",
+  "Tuku_Township": "土庫鎮",
+  "Baozhong_Township": "褒忠鄉",
+  "Taixi_Township": "台西鄉",
+  "Lunbei_Township": "崙背鄉",
+  "Mailiao_Township": "麥寮鄉",
+  "Douliu_City": "斗六市",
+  "Linnei_Township": "林內鄉",
+  "Gukeng_Township": "古坑鄉",
+  "Citong_Township": "莿桐鄉",
+  "Xiluo_Township": "西螺鎮",
+  "Erlun_Township": "二崙鄉",
+  "Beigang_Township": "北港鎮",
+  "Shuilin_Township": "水林鄉",
+  "Kouhu_Township": "口湖鄉",
+  "Sihu_Township": "四湖鄉",
+  "Yuanchang_Township": "元長鄉",
+  "West_Central_District": "中西區",
+  "Anping_District": "安平區",
+  "Annan_District": "安南區",
+  "Yongkang_District": "永康區",
+  "Guiren_District": "歸仁區",
+  "Xinhua_District": "新化區",
+  "Zuozhen_District": "左鎮區",
+  "Yujing_District": "玉井區",
+  "Nanxi_District": "楠西區",
+  "Nanhua_District": "南化區",
+  "Rende_District": "仁德區",
+  "Guanmiao_District": "關廟區",
+  "Longqi_District": "龍崎區",
+  "Guantian_District": "官田區",
+  "Madou_District": "麻豆區",
+  "Jiali_District": "佳里區",
+  "Xigang_District": "西港區",
+  "Qigu_District": "七股區",
+  "Jiangjun_District": "將軍區",
+  "Xuejia_District": "學甲區",
+  "Beimen_District": "北門區",
+  "Xinying_District": "新營區",
+  "Houbi_District": "後壁區",
+  "Baihe_District": "白河區",
+  "Dongshan_District": "東山區",
+  "Liujia_District": "六甲區",
+  "Xiaying_District": "下營區",
+  "Liuying_District": "柳營區",
+  "Yanshui_District": "鹽水區",
+  "Shanhua_District": "善化區",
+  "Danei_District": "大內區",
+  "Shanshang_District": "山上區",
+  "Xinshi_District": "新市區",
+  "Anding_District": "安定區",
+  "Xinxing_District'": "新興區",
+  "Qianjin_District": "前金區",
+  "Lingya_District": "苓雅區",
+  "Yancheng_District": "鹽埕區",
+  "Gushan_District": "鼓山區",
+  "Qijin_District": "旗津區",
+  "Qianzhen_District": "前鎮區",
+  "Sanmin_District": "三民區",
+  "Nanzi_District": "楠梓區",
+  "Xiaogang_District": "小港區",
+  "Zuoying_District": "左營區",
+  "Renwu_District": "仁武區",
+  "Dashe_District'": "大社區",
+  "Dongsha_Islands": "東沙群島",
+  "Nansha_Islands": "南沙群島",
+  "Gangshan_District": "岡山區",
+  "Alian_District": "阿蓮區",
+  "Tianliao_District": "田寮區",
+  "Yanchao_District": "燕巢區",
+  "Qiaotou_District": "橋頭區",
+  "Ziguan_District": "梓官區",
+  "Mituo_District": "彌陀區",
+  "Yong’an_District": "永安區",
+  "Hunei_District": "湖內區",
+  "Fengshan_District": "鳳山區",
+  "Daliao_District": "大寮區",
+  "Linyuan_District": "林園區",
+  "Niaosong_District": "鳥松區",
+  "Dashu_District": "大樹區",
+  "Qishan_District": "旗山區",
+  "Meinong_District": "美濃區",
+  "Liugui_District": "六龜區",
+  "Neimen_District": "內門區",
+  "Shanlin_District": "杉林區",
+  "Jiaxian_District": "甲仙區",
+  "Namaxia_District": "那瑪夏區",
+  "Maolin_District": "茂林區",
+  "Qieding_District": "茄萣區",
+  "Magong_City": "馬公市",
+  "Xiyu_Township": "西嶼鄉",
+  "Wang’an_Township": "望安鄉",
+  "Qimei_Township": "七美鄉",
+  "Baisha_Township": "白沙鄉",
+  "Huxi_Township": "湖西鄉",
+  "Jinsha_Township": "金沙鎮",
+  "Jinhu_Township": "金湖鎮",
+  "Jinning_Township": "金寧鄉",
+  "Jincheng_Township": "金城鎮",
+  "Lieyu_Township": "烈嶼鄉",
+  "Wuqiu_Township": "烏坵鄉",
+  "Pingtung_City": "屏東市",
+  "Sandimen_Township": "三地門鄉",
+  "Wutai_Township": "霧台鄉",
+  "Majia_Township": "瑪家鄉",
+  "Jiuru_Township": "九如鄉",
+  "Ligang_Township": "里港鄉",
+  "Gaoshu_Township": "高樹鄉",
+  "Yanpu_Township": "鹽埔鄉",
+  "Changzhi_Township": "長治鄉",
+  "Linluo_Township": "麟洛鄉",
+  "Zhutian_Township": "竹田鄉",
+  "Neipu_Township": "內埔鄉",
+  "Wandan_Township": "萬丹鄉",
+  "Chaozhou_Township": "潮州鎮",
+  "Taiwu_Township": "泰武鄉",
+  "Laiyi_Township": "來義鄉",
+  "Wanluan_Township": "萬巒鄉",
+  "Kanding_Township": "崁頂鄉",
+  "Xinpi_Township": "新埤鄉",
+  "Nanzhou_Township": "南州鄉",
+  "Linbian_Township": "林邊鄉",
+  "Donggang_Township": "東港鎮",
+  "Liuqiu_Township": "琉球鄉",
+  "Jiadong_Township": "佳冬鄉",
+  "Xinyuan_Township": "新園鄉",
+  "Fangliao_Township": "枋寮鄉",
+  "Fangshan_Township": "枋山鄉",
+  "Chunri_Township": "春日鄉",
+  "Shizi_Township": "獅子鄉",
+  "Checheng_Township": "車城鄉",
+  "Mudan_Township": "牡丹鄉",
+  "Hengchun_Township": "恆春鎮",
+  "Manzhou_Township": "滿州鄉",
+  "Taitung_City": "台東市",
+  "Ludao_Township": "綠島鄉",
+  "Lanyu_Township": "蘭嶼鄉",
+  "Yanping_Township": "延平鄉",
+  "Beinan_Township": "卑南鄉",
+  "Luye_Township": "鹿野鄉",
+  "Guanshan_Township": "關山鎮",
+  "Haiduan_Township": "海端鄉",
+  "Chishang_Township": "池上鄉",
+  "Donghe_Township": "東河鄉",
+  "Chenggong_Township": "成功鎮",
+  "Changbin_Township": "長濱鄉",
+  "Taimali_Township": "太麻里",
+  "Jinfeng_Township": "金峰鄉",
+  "Dawu_Township": "大武鄉",
+  "Daren_Township": "達仁鄉",
+  "Hualien_City": "花蓮市",
+  "Xincheng_Township": "新城鄉",
+  "Xiulin_Township": "秀林鄉",
+  "Ji’an_Township": "吉安鄉",
+  "Shoufeng_Township": "壽豐鄉",
+  "Fenglin_Township": "鳳林鎮",
+  "Guangfu_Township": "光復鄉",
+  "Fengbin_Township": "豐濱鄉",
+  "Ruisui_Township": "瑞穗鄉",
+  "Wanrong_Township": "萬榮鄉",
+  "Yuli_Township": "玉里鎮",
+  "Zhuoxi_Township": "卓溪鄉",
+  "Fuli_Township": "富里鄉",
+  "Nangan_Township": "南竿鄉",
+  "Beigan_Township": "北竿鄉",
+  "Juguang_Township": "莒光鄉",
+  "Dongyin_Township": "東引鄉"
 }
