--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -6,8 +6,8 @@
   "title_1": "Hot",
   "slogan": "hello",
   "about": "about us",
-  "step1": "AccountInfo",
-  "step2": "PersonalInfo",
+  "step1": "Account Info",
+  "step2": "Personal Info",
   "account": "Account",
   "password": "Password",
   "confirm_password": "Confirm Password",
@@ -16,7 +16,8 @@
   "address": "Address",
   "city": "City",
   "district": "District",
-  "tel": "Phone Number",
+  "tel": "Telephone",
+  "mobile": "Mobile Phone",
   "gender": "Gender",
   "birthday": "Birthday",
   "email": "Email",
