--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -17,6 +17,7 @@
   "city": "縣市",
   "district": "鄉鎮區",
   "tel": "聯絡電話",
+  "mobile": "手機",
   "gender": "性別",
   "birthday": "出生年月日",
   "email": "電子信箱",
