0804註冊登入中

--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -22,7 +22,7 @@
   "birthday": "Birthday",
   "email": "Email",
   "select_role": "Select member role",
-  "register_membership": "Register",
+  "register": "Register",
   "back": "Back",
   "next": "Continue",
   "cancel": "Cancel",
@@ -33,6 +33,9 @@
   "rahter_not_say": "Rather not say",
   "required": "Required",
   "null": "",
+  "login": "Login",
+  "not_yet_registered": "Not yet registered?",
+  "create_account": "Create Workweee account",
   "Taipei_City": "Taipei City",
   "Keelung_City": "Keelung City",
   "New_Taipei_City": "New Taipei City",
