--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -22,7 +22,7 @@
   "birthday": "出生年月日",
   "email": "電子信箱",
   "select_role": "請選擇會員身分",
-  "register_membership": "註冊會員",
+  "register": "註冊",
   "back": "回上一步",
   "next": "下一步",
   "cancel": "取消",
@@ -33,6 +33,9 @@
   "rahter_not_say": "不願透露",
   "required": "必填",
   "null": "帳號長度為 4 到 20 個字",
+  "login": "登入",
+  "not_yet_registered": "未註冊帳戶？",
+  "create_account": "註冊 Workweee",
   "Taipei_City": "臺北市",
   "Keelung_City": "基隆市",
   "New_Taipei_City": "新北市",
