接著做語言切換 登入登出ok

--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -1,10 +1,7 @@
 {
-  "role_host": "Host",
-  "role_helper": "Helper",
-  "role_admin": "Administrator",
-  "role_admin11": "Administrator",
+  "logout": "Logout",
   "title_1": "Hot",
-  "slogan": "hello",
+  "slogan": "",
   "about": "about us",
   "step1": "Account Info",
   "step2": "Personal Info",
@@ -21,7 +18,10 @@
   "gender": "Gender",
   "birthday": "Birthday",
   "email": "Email",
-  "select_role": "Select member role",
+  "role_host": "Host",
+  "role_helper": "Helper",
+  "register_as": "Register as",
+  "login_as": "Login as",
   "register": "Register",
   "back": "Back",
   "next": "Continue",
