--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -1,10 +1,7 @@
 {
-  "role_host": "業主",
-  "role_helper": "小幫手",
-  "role_admin": "管理員",
-  "role_admin11": "管理員",
+  "logout": "登出",
   "title_1": "熱門換宿",
-  "slogan": "你好",
+  "slogan": "",
   "about": "關於我們",
   "step1": "會員帳號資料",
   "step2": "基本資料",
@@ -21,7 +18,10 @@
   "gender": "性別",
   "birthday": "出生年月日",
   "email": "電子信箱",
-  "select_role": "請選擇會員身分",
+  "role_host": "業主",
+  "role_helper": "小幫手",
+  "register_as": "請選擇註冊身分",
+  "login_as": "請選擇登入身分",
   "register": "註冊",
   "back": "回上一步",
   "next": "下一步",
