--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -1,5 +1,7 @@
 {
   "logout": "Logout",
+  "manage_profile": "Manage Profile",
+  "application_status": "Application Status",
   "title_1": "Hot",
   "slogan": "",
   "about": "about us",
