--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -1,5 +1,7 @@
 {
   "logout": "登出",
+  "manage_profile": "管理我的帳戶",
+  "application_status": "報名狀態",
   "title_1": "熱門換宿",
   "slogan": "",
   "about": "關於我們",
