繼續改地區選項post成郵遞區號

--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -1,10 +1,17 @@
 {
   "logout": "Logout",
   "manage_profile": "Manage Profile",
+  "my_info": "My Info",
   "application_status": "Application Status",
+  "post_jobs": "Post Jobs",
+  "translate": "Translate",
+  "about_us": "About Us",
+  "find_jobs": "Find Jobs",
+  "faqs": "FAQ's",
+  "contact_us": "Contact Us",
+  "welcome_back": "Welcome Back",
   "title_1": "Hot",
   "slogan": "",
-  "about": "about us",
   "step1": "Account Info",
   "step2": "Personal Info",
   "account": "Account",
