--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -1,10 +1,17 @@
 {
   "logout": "登出",
   "manage_profile": "管理我的帳戶",
+  "my_info": "我的資料",
   "application_status": "報名狀態",
+  "post_jobs": "刊登換宿",
+  "translate": "翻譯語言",
+  "about_us": "關於我們",
+  "find_jobs": "換宿機會",
+  "faqs": "換宿FAQ's",
+  "contact_us": "聯絡我們",
+  "welcome_back": "歡迎回來",
   "title_1": "熱門換宿",
   "slogan": "",
-  "about": "關於我們",
   "step1": "會員帳號資料",
   "step2": "基本資料",
   "account": "會員帳號",
