編輯使用者資料未完成

--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -2,6 +2,7 @@
   "logout": "Logout",
   "manage_profile": "Manage Profile",
   "my_info": "My Info",
+  "my_resume": "My resume",
   "application_status": "Application Status",
   "post_jobs": "Post Jobs",
   "translate": "Translate",
