編輯使用者

--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -423,5 +423,9 @@
   "Nangan_Township": "Nangan Township",
   "Beigan_Township": "Beigan Township",
   "Juguang_Township": "Juguang Township",
-  "Dongyin_Township": "Dongyin Township"
+  "Dongyin_Township": "Dongyin Township",
+  "story_of_my_life": "Story of my life",
+  "photos": "Photos",
+  "tell_me_someting_about_you": "Tell me something about you!",
+  "upload_file": "Upload file"
 }
