--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -423,5 +423,9 @@
   "Nangan_Township": "南竿鄉",
   "Beigan_Township": "北竿鄉",
   "Juguang_Township": "莒光鄉",
-  "Dongyin_Township": "東引鄉"
+  "Dongyin_Township": "東引鄉",
+  "story_of_my_life": "關於我的故事",
+  "photos": "生活照",
+  "tell_me_someting_about_you": "說說你的故事吧!",
+  "upload_file": "上傳檔案"
 }
