繼續刊登工作

--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -425,7 +425,25 @@
   "Juguang_Township": "Juguang Township",
   "Dongyin_Township": "Dongyin Township",
   "story_of_my_life": "Story of my life",
+  "photos_host": "Photos",
   "photos": "Photos",
   "tell_me_someting_about_you": "Tell me something about you!",
-  "upload_file": "Upload file"
+  "upload_file": "Upload files",
+  "is_shown": "",
+  "is_not_shown": "",
+  "save": "Save",
+  "job_title": "Job Title",
+  "job_category": "Job Category",
+  "job_time": "Time",
+  "job_description": "Job Description",
+  "job_welfare": "Welfare",
+  "job_published_time": "Published Time",
+  "job_question": "Ask the helpers for a question",
+  "job_isShown": "Show",
+  "dorm_bed": "Dorm Bed",
+  "vehicle": "Vehicle",
+  "pocket_money": "Pocket Money",
+  "insurance": "Insurance",
+  "free_course": "Free Course",
+  "meal": "Meal"
 }
