--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -425,7 +425,25 @@
   "Juguang_Township": "莒光鄉",
   "Dongyin_Township": "東引鄉",
   "story_of_my_life": "關於我的故事",
+  "photos_host": "民宿照片",
   "photos": "生活照",
   "tell_me_someting_about_you": "說說你的故事吧!",
-  "upload_file": "上傳檔案"
+  "upload_file": "上傳檔案",
+  "is_shown": "已啟用",
+  "is_not_shown": "未啟用",
+  "save": "儲存編輯",
+  "job_title": "職缺名稱",
+  "job_category": "換宿類型",
+  "job_time": "換宿時間",
+  "job_description": "工作內容",
+  "job_welfare": "換宿福利",
+  "job_published_time": "發布時間",
+  "job_question": "提問小幫手",
+  "job_isShown": "顯示刊登",
+  "dorm_bed": "住宿床位",
+  "vehicle": "交通工具",
+  "pocket_money": "零用金",
+  "insurance": "投保保險",
+  "free_course": "免費課程",
+  "meal": "供餐"
 }
