--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -13,6 +13,7 @@
   "welcome_back": "Welcome Back",
   "title_1": "Hot",
   "slogan": "",
+  "home": "Home",
   "step1": "Account Info",
   "step2": "Personal Info",
   "account": "Account",
