--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -13,6 +13,7 @@
   "welcome_back": "歡迎回來",
   "title_1": "熱門換宿",
   "slogan": "",
+  "home": "首頁",
   "step1": "會員帳號資料",
   "step2": "基本資料",
   "account": "會員帳號",
