--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -14,6 +14,8 @@
   "title_1": "Hot",
   "slogan": "",
   "home": "Home",
+  "read_more": "Read More",
+  "apply": "Apply",
   "step1": "Account Info",
   "step2": "Personal Info",
   "account": "Account",
