--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -14,6 +14,8 @@
   "title_1": "熱門換宿",
   "slogan": "",
   "home": "首頁",
+  "read_more": "詳細資訊",
+  "apply": "報名",
   "step1": "會員帳號資料",
   "step2": "基本資料",
   "account": "會員帳號",
